# bottom-can

./: .cproject  .mxproject  .project  README.md  STM32G431RBTX_FLASH.ld  bottom-can Debug.launch  bottom-can.ioc
Core/Inc/: main.h  stm32g4xx_hal_conf.h
Core/Inc/BNO085/: ceva_bno085.h
Core/Src/: main.c  stm32g4xx_hal_msp.c
Core/Src/BNO085/: ceva_bno085.c
Debug/: bottom-can.elf  bottom-can.list  bottom-can.map  makefile  objects.list  sources.mk
Debug/Core/Src/: main.cyclo  main.d  main.su  stm32g4xx_hal_msp.cyclo  stm32g4xx_hal_msp.d  stm32g4xx_hal_msp.su  stm32g4xx_it.d  subdir.mk
Debug/Core/Src/BNO085/: ceva_bno085.cyclo  ceva_bno085.d  ceva_bno085.su  sh2.cyclo  sh2.d  sh2.su  sh2_SensorValue.cyclo  sh2_SensorValue.d  sh2_SensorValue.su  sh2_util.cyclo  sh2_util.d  sh2_util.su  shtp.cyclo  shtp.d  shtp.su  subdir.mk
Debug/Drivers/BSP/STM32G4xx_Nucleo/: stm32g4xx_nucleo.d  subdir.mk
Debug/Drivers/STM32G4xx_HAL_Driver/Src/: stm32g4xx_hal_fdcan.cyclo  stm32g4xx_hal_usart.d  stm32g4xx_hal_usart_ex.d  subdir.mk
tools/bottom-can-cpp/: CMakeLists.txt  README.md
tools/bottom-can-cpp/src/: main.cpp
tools/bottom-can-python/: README.md  pyproject.toml  requirements.txt
tools/bottom-can-python/bottom_can_tools/: __init__.py  cli.py  frames.py
tools/bottom-can-python/bottom_can_tools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
