[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "bottom-can-tools"
version = "0.1.0"
description = "CAN sender/monitor for bottom-can BNO085 frames"
requires-python = ">=3.9"
dependencies = [
  "python-can>=4.4",
  "pyserial>=3.5",
]

[project.scripts]
bottom-can = "bottom_can_tools.cli:main"
